tests/verifier/fail/test9.ial
function int32 foo()
{
    register int64 x;

    block entry
    {
        return x;
    }
}
